--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,10 @@
         "php": ">=7.0",
         "illuminate/support": "5.*",
         "illuminate/database": "5.*",
-        "league/fractal": "^0.15.0"
+        "league/fractal": "^0.15"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "^6.0"
     },
     "minimum-stability": "stable",
     "autoload": {
