--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "php": ">=7.0",
         "illuminate/support": "5.*",
         "illuminate/database": "5.*",
-        "league/fractal": "^0.16"
+        "league/fractal": "^0.16",
+        "saritasa/laravel-controllers": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
