--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,11 @@
         "saritasa/laravel-controllers": "^2.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0"
+        "phpunit/phpunit": "^6.0",
+        "squizlabs/php_codesniffer": "^3.0"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable" : true,
     "autoload": {
         "psr-4" : {
             "Saritasa\\": "src/"
