--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "squizlabs/php_codesniffer": "^3.0"
     },
     "prefer-stable" : true,
+    "minimum-stability": "beta",
     "autoload": {
         "psr-4" : {
             "Saritasa\\": "src/"
