--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "squizlabs/php_codesniffer": "^3.0"
     },
     "prefer-stable" : true,
-    "minimum-stability": "beta",
+    "minimum-stability": "alpha",
     "autoload": {
         "psr-4" : {
             "Saritasa\\": "src/"
