Change namespace for tests

--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,11 @@
             "Saritasa\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4" : {
+            "Saritasa\\Repositories\\Tests\\": "src/"
+        }
+    },
     "config": {
         "preferred-install": "dist",
         "sort-packages": true
