--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "saritasa/laravel-controllers": "^2.0"
     },
     "require-dev": {
+        "mockery/mockery": "^1.0",
         "phpunit/phpunit": "^6.0",
         "squizlabs/php_codesniffer": "^3.0"
     },
@@ -30,7 +31,7 @@
     },
     "autoload-dev": {
         "psr-4" : {
-            "Saritasa\\Repositories\\Tests\\": "src/"
+            "Saritasa\\Repositories\\Tests\\": "tests/"
         }
     },
     "config": {
