--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,10 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "illuminate/support": "5.*",
-        "illuminate/database": "5.*",
-        "saritasa/dingo-api-custom": "^2.0",
-        "saritasa/laravel-controllers": "^2.0"
+        "php": ">=7.1",
+        "illuminate/support": "^5.5",
+        "illuminate/database": "^5.5",
+        "saritasa/dingo-api-custom": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
