--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     "require-dev": {
         "mockery/mockery": "^1.1",
         "phpunit/phpunit": "^7.5",
-        "squizlabs/php_codesniffer": "^3.0"
+        "squizlabs/php_codesniffer": "^3.0",
+        "slevomat/coding-standard": "^5.0"
     },
     "prefer-stable" : true,
     "minimum-stability": "alpha",
