--- a/composer.json
+++ b/composer.json
@@ -12,14 +12,14 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/support": "^5.5",
-        "illuminate/database": "^5.5",
+        "illuminate/support": "^5.5|^6.0",
+        "illuminate/database": "^5.5|^6.0",
         "saritasa/dingo-api-custom": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.1",
         "phpunit/phpunit": "^7.5",
-        "squizlabs/php_codesniffer": "^3.0",
+        "squizlabs/php_codesniffer": "^3.5",
         "slevomat/coding-standard": "^5.0"
     },
     "prefer-stable" : true,
