--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,8 @@
     ],
     "require": {
         "php": ">=7.1",
-        "illuminate/support": "^5.5|^6.0",
-        "illuminate/database": "^5.5|^6.0",
+        "illuminate/support": "^5.5 || ^6.0",
+        "illuminate/database": "^5.5 || ^6.0",
         "saritasa/dingo-api-custom": "^2.0"
     },
     "require-dev": {
