--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,29 @@
             "email": "sergey@saritasa.com"
         }
     ],
+    "repositories": [ 
+        { 
+            "type": "package", 
+            "package": { 
+                "name": "saritasa/dingo-api-custom", 
+                "version": "dev-main", 
+                "source": { 
+                    "url": "https://github.com/sicsdev/dingo-api-custom", 
+                    "type": "git", 
+                    "reference": "main" 
+                } 
+            } 
+        } 
+    ],
     "require": {
-        "php": ">=7.1",
-        "illuminate/support": "^5.5 || ^6.0",
-        "illuminate/database": "^5.5 || ^6.0",
-        "saritasa/dingo-api-custom": "^2.0"
+        "php": ">=8.0",
+        "illuminate/support": "^5.5 || ^6.0 || ^9.0",
+        "illuminate/database": "^5.5 || ^6.0 || ^9.0",
+        "saritasa/dingo-api-custom": "dev-main"
     },
     "require-dev": {
         "mockery/mockery": "^1.1",
-        "phpunit/phpunit": "^7.5",
-        "squizlabs/php_codesniffer": "^3.5",
-        "slevomat/coding-standard": "^5.0"
+        "phpunit/phpunit": "^9.5.10"
     },
     "prefer-stable" : true,
     "minimum-stability": "alpha",
